--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.8.1'
     implementation 'com.facebook.fresco:animated-gif:1.9.0'
 
+    // Glide - Image management
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
     // Testing
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.json:json:20140107'
